--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -1,257 +1,207 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Main Page{% endblock %}
-
-{% block stylesheets %}
-<style>
-    .custom-content {
-        color: #333;
-    }
-
-    /* Стиль для стрелочек */
-    .arrow {
-        margin-left: 10px;
-        transition: transform 0.3s;
-    }
-
-    .collapsed .arrow {
-        transform: rotate(90deg);
-    }
-
-    .nav-item {
-        position: relative;
-    }
-    
-    .nav-item .dropdown-menu {
-        display: none;
-        position: absolute;
-        left: 100%;
-        top: 0px;
-        margin-left: 10px;
-        background-color: #f8f9fa;
-        padding: 10px;
-        border-radius: 5px;
-        z-index: 9999; /* Убедитесь, что z-index высокий */
-    }
-    
-    .nav-item:hover .dropdown-menu {
-        display: block;
-    }
-
-    /* Стили для иконок */
-    .nav-item i {
-        margin-right: 8px;
-    }
-
-    /* Стили для кружочка с количеством товаров */
-    .cart-container {
-        position: relative;
-        display: inline-block;
-    }
-
-    .cart-badge {
-        position: absolute;
-        top: 2px;
-        right: -65px;
-        background-color: #ff5733;
-        color: white;
-        border-radius: 50%;
-        width: 20px;
-        height: 20px;
-        text-align: center;
-        font-size: 12px;
-        font-weight: bold;
-    }
-    .logo-container {
-        width: 150px;
-        height: 150px;
-        margin: 0 auto 25px auto; /* Центрирование и отступ снизу */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .header-logo {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: contain; /* Обеспечивает сохранение пропорций логотипа */
-    }
-
-    /* Стили для бургер-меню */
-    .burger-menu {
-        display: none;
-        cursor: pointer;
-    }
-
-    .burger-bar {
-        width: 30px;
-        height: 4px;
-        background-color: #333;
-        margin: 5px 0;
-        transition: all 0.3s ease-in-out;
-    }
-
-    .burger-menu.open .burger-bar:nth-child(1) {
-        transform: rotate(45deg) translate(5px, 5px);
-    }
-
-    .burger-menu.open .burger-bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .burger-menu.open .burger-bar:nth-child(3) {
-        transform: rotate(-45deg) translate(5px, -5px);
-    }
-
-    /* Адаптивность меню */
-    @media (max-width: 768px) {
-        .nav {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-        }
-        .nav.active {
-            display: flex;
-        }
-        .burger-menu {
-            display: block;
-        }
-    }
-    video {
-        position: relative;
-    }
-</style>
+{% block title %}Main Page
 {% endblock %}
 
+{% block stylesheets %}
+ <link rel="stylesheet" href="/css/main_page.css">
+ {% endblock %}
+
 {% block sidebar %}
-<div class="logo-container">
-    <a href="#">
-        <img src="https://theme905-computer-shop.myshopify.com/cdn/shop/files/logo_85e8c0fb-6fe4-472c-bb57-12b9152508d0_140x40_crop_center.png?v=1651578820" 
-             alt="Modern Connectivity Logo" class="header-logo">
-    </a>
-</div>
+	<div class="logo-container">
+		<a href="#">
+			<img src="https://theme905-computer-shop.myshopify.com/cdn/shop/files/logo_85e8c0fb-6fe4-472c-bb57-12b9152508d0_140x40_crop_center.png?v=1651578820" alt="Modern Connectivity Logo" class="header-logo">
+		</a>
+	</div>
 
-<!-- Бургер-меню -->
-<div class="burger-menu">
-    <div class="burger-bar"></div>
-    <div class="burger-bar"></div>
-    <div class="burger-bar"></div>
-</div>
+	<!-- Бургер-меню -->
+	<div class="burger-menu">
+		<div class="burger-bar"></div>
+		<div class="burger-bar"></div>
+		<div class="burger-bar"></div>
+	</div>
 
-<ul class="nav flex-column first-block" style="margin-bottom: 100px;">
-    <li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-home"></i>Home</a></li>
-    
-    <!-- Shop with dropdown -->
-    <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-store"></i>Shop <span class="arrow">&#x25B6;</span></a>
-        <ul class="nav flex-column dropdown-menu">
-            <li class="nav-item"><a class="nav-link" href="#">Shop Item 1</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Shop Item 2</a></li>
-        </ul>
-    </li>
+	<ul class="nav flex-column first-block" style="margin-bottom: 100px;">
+		<li class="nav-item">
+			<a class="nav-link active" href="#">
+				<i class="fas fa-home"></i>Home</a>
+		</li>
 
-    <!-- Pages with dropdown -->
-    <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-file-alt"></i>Pages <span class="arrow">&#x25B6;</span></a>
-        <ul class="nav flex-column dropdown-menu">
-            <li class="nav-item"><a class="nav-link" href="#">Page 1</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Page 2</a></li>
-        </ul>
-    </li>
+		<!-- Shop with dropdown -->
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<i class="fas fa-store"></i>Shop
+				<span class="arrow">&#x25B6;</span>
+			</a>
+			<ul class="nav flex-column dropdown-menu">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Shop Item 1</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Shop Item 2</a>
+				</li>
+			</ul>
+		</li>
 
-    <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-blog"></i>Blog</a></li>
+		<!-- Pages with dropdown -->
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<i class="fas fa-file-alt"></i>Pages
+				<span class="arrow">&#x25B6;</span>
+			</a>
+			<ul class="nav flex-column dropdown-menu">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Page 1</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Page 2</a>
+				</li>
+			</ul>
+		</li>
 
-    <!-- Sale with dropdown -->
-    <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-tags"></i>Sale <span class="arrow">&#x25B6;</span></a>
-        <ul class="nav flex-column dropdown-menu">
-            <li class="nav-item"><a class="nav-link" href="#">Sale Item 1</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Sale Item 2</a></li>
-        </ul>
-    </li>
-</ul>
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<i class="fas fa-blog"></i>Blog</a>
+		</li>
 
-<ul class="nav flex-column first-block" style="margin-bottom: 100px;">
-    <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-search"></i>Search</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-user"></i>Login</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-heart"></i>Wishlist</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">
-            <div class="cart-container">
-                <i class="fas fa-shopping-cart"></i>
-                <span class="cart-badge">3</span>
-            </div>
-            Cart
-        </a>
-    </li>
-</ul>
+		<!-- Sale with dropdown -->
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<i class="fas fa-tags"></i>Sale
+				<span class="arrow">&#x25B6;</span>
+			</a>
+			<ul class="nav flex-column dropdown-menu">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Sale Item 1</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Sale Item 2</a>
+				</li>
+			</ul>
+		</li>
+	</ul>
 
-<ul class="nav flex-column first-block" style="margin-bottom: 100px; position: absolute; right:50;">
-    <!-- Додайте соціальні кнопки -->
-    <li class="nav-item">
-        <a class="nav-link" href="#" style="display: flex; justify-content: space-evenly;">
-            <i class="fab fa-facebook-f" style="font-size: 20px; color: #3b5998;"></i>
-            <i class="fab fa-instagram" style="font-size: 20px; color: #e1306c;"></i>
-            <i class="fab fa-youtube" style="font-size: 20px; color: #ff0000;"></i>
-            <i class="fab fa-linkedin-in" style="font-size: 20px; color: #0077b5;"></i>
-            <i class="fab fa-pinterest-p" style="font-size: 20px; color: #e60023;"></i>
-        </a>
-    </li>
-</ul>
+	<ul class="nav flex-column first-block" style="margin-bottom: 100px;">
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<i class="fas fa-search"></i>Search</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<i class="fas fa-user"></i>Login</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<i class="fas fa-heart"></i>Wishlist</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<div class="cart-container">
+					<i class="fas fa-shopping-cart"></i>
+					<span class="cart-badge">3</span>
+				</div>
+				Cart
+			</a>
+		</li>
+	</ul>
+
+	<ul
+		class="nav flex-column first-block" style="margin-bottom: 100px; position: absolute; right:50;">
+		<!-- Додайте соціальні кнопки -->
+		<li class="nav-item">
+			<a class="nav-link" href="#" style="display: flex; justify-content: space-evenly;">
+				<i class="fab fa-facebook-f" style="font-size: 20px; color: #3b5998;"></i>
+				<i class="fab fa-instagram" style="font-size: 20px; color: #e1306c;"></i>
+				<i class="fab fa-youtube" style="font-size: 20px; color: #ff0000;"></i>
+				<i class="fab fa-linkedin-in" style="font-size: 20px; color: #0077b5;"></i>
+				<i class="fab fa-pinterest-p" style="font-size: 20px; color: #e60023;"></i>
+			</a>
+		</li>
+	</ul>
 
 {% endblock %}
 
 {% block content %}
-<div style="position: relative; text-align: center; color: white; margin-bottom: 20px;">
-    <video autoplay muted style="width: 100%; height: auto;">
-        <source src="https://cdn.shopify.com/s/files/1/0453/5035/5103/files/mobilex.mp4?v=1651578696" type="video/mp4">
-        Ваш браузер не поддерживает видео.
-    </video>
-    
-    <div style="position: absolute; top: 60%; left: 15%; transform: translate(-50%, -50%);">
-        <h2 style="color: white;">NEW COLLECTION</h2>
-        <p>Bike is a part<br>of culture</p>
-        <a href="#" style="text-decoration: underline; color: white;">EXPLORE COLLECTIONS</a>
-    </div>
-</div>
+	<div style="position: relative; text-align: center; color: white; margin-bottom: 20px;">
+		<video autoplay muted style="width: 100%; height: auto;">
+			<source src="https://cdn.shopify.com/s/files/1/0453/5035/5103/files/mobilex.mp4?v=1651578696" type="video/mp4">
+			Ваш браузер не поддерживает видео.
+		</video>
 
-<h1>Welcome to the Main Page</h1>
-<p class="custom-content">This is the main page content.</p>
+		<div style="position: absolute; top: 60%; left: 15%; transform: translate(-50%, -50%);">
+			<h2 style="color: white;">NEW COLLECTION</h2>
+			<p>Bike is a part<br>of culture</p>
+			<a href="#" style="text-decoration: underline; color: white;">EXPLORE COLLECTIONS</a>
+		</div>
+	</div>
 
-<p>Here is some scrollable content...</p>
 {% endblock %}
 
-{% block javascripts %}
+{% block product %}
+	<div class="container my-5">
+		<h2 class="text-center mb-4">Featured Products</h2>
+		<div
+			class="row row-cols-1 row-cols-md-4 g-4">
+			<!-- Карточка 1 -->
+			<div class="col">
+				<div class="card h-300">
+					<img class="img-fluid photo-padding" src="https://theme905-computer-shop.myshopify.com/cdn/shop/products/macbook_air_1_720x.jpg?v=1651585844">
+
+				</div>
+			</div>
+			<!-- Карточка 2 -->
+			<div class="col">
+				<div class="card h-300">
+					<img class="img-fluid photo-padding"  src="https://theme905-computer-shop.myshopify.com/cdn/shop/products/macbook_air_1_720x.jpg?v=1651585844">
+
+				</div>
+			</div>
+		<!-- Карточка 3 -->
+		<div class="col">
+			<div class="card h-300">
+				<img class="img-fluid photo-padding" src="https://theme905-computer-shop.myshopify.com/cdn/shop/products/macbook_air_1_720x.jpg?v=1651585844">
+
+			</div>
+		</div>
+		<!-- Карточка 4 -->
+
+		<div class="col">
+			<div class="card h-300">
+				<img class="img-fluid photo-padding" src="https://theme905-computer-shop.myshopify.com/cdn/shop/products/macbook_air_1_720x.jpg?v=1651585844">
+			</div>
+		</div>
+        <div class="col">
+			<div class="card h-300">
+				<img class="img-fluid photo-padding" src="https://theme905-computer-shop.myshopify.com/cdn/shop/products/macbook_air_1_720x.jpg?v=1651585844">
+			</div>
+		</div>
+        </div>
+	</div>
+</div>{% endblock %}{% block javascripts %}
 <script>
-    // Додано для відкриття і закриття меню при натисканні на бургер-меню
+	// Додано для відкриття і закриття меню при натисканні на бургер-меню
     const burgerMenu = document.querySelector('.burger-menu');
     const nav = document.querySelector('.nav');
 
     burgerMenu.addEventListener('click', () => {
-        nav.classList.toggle('active');
-        burgerMenu.classList.toggle('open');
+    nav.classList.toggle('active');
+    burgerMenu.classList.toggle('open');
     });
 
     // Стрілочки для дропдаунів
     document.querySelectorAll('.nav-item').forEach(item => {
-        item.addEventListener('mouseenter', function () {
-            let arrow = this.querySelector('.arrow');
-            if (arrow) {
-                arrow.style.transform = 'rotate(90deg)';
-            }
-        });
-        item.addEventListener('mouseleave', function () {
-            let arrow = this.querySelector('.arrow');
-            if (arrow) {
-                arrow.style.transform = 'rotate(0deg)';
-            }
-        });
+    item.addEventListener('mouseenter', function () {
+    let arrow = this.querySelector('.arrow');
+    if (arrow) {
+    arrow.style.transform = 'rotate(90deg)';
+    }
     });
-</script>
-{% endblock %}
+    item.addEventListener('mouseleave', function () {
+    let arrow = this.querySelector('.arrow');
+    if (arrow) {
+    arrow.style.transform = 'rotate(0deg)';
+    }
+    });
+    });
+</script>{% endblock %}
+
