--- a/public/css/main_page.css
+++ b/public/css/main_page.css
@@ -2,10 +2,16 @@
     color: #333;
 }
 
-/* Стиль для стрелочек */
 .arrow {
     margin-left: 10px;
     transition: transform 0.3s;
+}
+
+a {
+    font-family: 'Josefin Sans', sans-serif;
+    text-transform: capitalize;
+    color: #121212;
+    text-decoration: none;
 }
 
 .collapsed .arrow {
@@ -30,14 +36,13 @@
 
 .nav-item:hover .dropdown-menu {
     display: block;
+    z-index: 10;
 }
 
-/* Стили для иконок */
 .nav-item i {
     margin-right: 8px;
 }
 
-/* Стили для кружочка с количеством товаров */
 .cart-container {
     position: relative;
     display: inline-block;
@@ -56,10 +61,11 @@
     font-size: 12px;
     font-weight: bold;
 }
+
 .logo-container {
     width: 150px;
     height: 150px;
-    margin: 0 auto 25px; /* Центрирование и отступ снизу */
+    margin: 0 auto 25px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,10 +74,9 @@
 .header-logo {
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain; /* Обеспечивает сохранение пропорций логотипа */
+    object-fit: contain;
 }
 
-/* Стили для бургер-меню */
 .burger-menu {
     display: none;
     cursor: pointer;
@@ -100,7 +105,6 @@
     padding: 2px;
 }
 
-/* Адаптивность меню */
 @media(max-width: 768px) {
     .nav {
         display: none;
@@ -114,6 +118,16 @@
         display: block;
     }
 }
+
 video {
     position: relative;
+    z-index: -1;
+}
+
+.footer-links a{
+    padding: 0 10px 0 0;
+}
+
+.card {
+    z-index: -1;
 }
