--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,41 +6,9 @@
     <title>{% block title %}Default Title{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-        .sidebar {
-            height: 100vh;
-            position: sticky;
-            top: 0;
-            background-color: #f8f9fa;
-            padding: 1rem;
-        }
-        .content {
-            margin: 0;
-            padding: 0;
-        }
-        
-        .first-block a {
-            font-family: 'Josefin Sans', sans-serif;
-            text-transform: capitalize;
-            color: #121212;
-            text-decoration: none;
-        }
-
-        .arrow {
-            margin-left: 10px;
-            transition: transform 0.3s;
-        }
-
-        .collapsed .arrow {
-            transform: rotate(90deg);
-        }
-    </style>
-    {% block stylesheets %}{% endblock %}
+    <link rel="stylesheet" href="{{ asset('css/base.css') }}">
+    {% block stylesheets %}
+    {% endblock %}
 </head>
 <body>
 <div class="container-fluid">
@@ -85,6 +53,12 @@
             <p>Default content goes here...</p>
             {% endblock %}
         </main>
+
+        <footer class="footer">
+            {% block footer_block %}
+                <p>Default content goes here...</p>
+            {% endblock %}
+        </footer>
     </div>
 </div>
 
