--- a/public/css/base.css
+++ b/public/css/base.css
@@ -10,8 +10,9 @@ body, html {
     height: 100vh;
     position: sticky;
     top: 0;
-    background-color: #f8f9fa;
+    background-color: #fff;
     padding: 1rem;
+    z-index: 10;
 }
 
 .content {
@@ -40,7 +41,7 @@ body, html {
 }
 
 .footer {
-    background-color: #f8f9fa;
+    background-color: #fff;
     padding: 2rem;
     text-align: center;
     display: flex;
