--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,60 +7,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{{ asset('css/base.css') }}">
-    {% block stylesheets %}
-    {% endblock %}
+    {% block stylesheets %}{% endblock %}
 </head>
 <body>
 <div class="container-fluid">
     <div class="row">
-        <nav class="col-md sidebar">
+        <nav class="col-md-3 col-lg-2 d-md-block sidebar">
             {% block sidebar %}
-            <ul class="nav flex-column first-block">
+            <button class="btn btn-primary d-md-none mb-3" id="toggleMenu">Toggle Menu</button>
+            <ul class="nav flex-column first-block" id="menu">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Shop <span class="arrow">&#x25B6;</span></a>
-                    <ul class="nav flex-column ms-3 collapse" id="shopMenu">
+                    <ul class="nav flex-column ms-3 collapse">
                         <li class="nav-item"><a class="nav-link" href="#">Shop Item 1</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Shop Item 2</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pages <span class="arrow">&#x25B6;</span></a>
-                    <ul class="nav flex-column ms-3 collapse" id="pagesMenu">
-                        <li class="nav-item"><a class="nav-link" href="#">Page 1</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Page 2</a></li>
-                    </ul>
-                </li>
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sale <span class="arrow">&#x25B6;</span></a>
-                    <ul class="nav flex-column ms-3 collapse" id="saleMenu">
-                        <li class="nav-item"><a class="nav-link" href="#">Sale Item 1</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Sale Item 2</a></li>
                     </ul>
                 </li>
             </ul>
             {% endblock %}
         </nav>
 
-        <main class="col-9 col-md-10 content">
+        <main class="col-md-9 col-lg-10 content">
             {% block content %}
             <p>Default content goes here...</p>
             {% endblock %}
-             {% block product %}
+            {% block product %}
             <p>Default content goes here...</p>
             {% endblock %}
         </main>
-
-        <footer class="footer">
-            {% block footer_block %}
-                <p>Default content goes here...</p>
-            {% endblock %}
-        </footer>
     </div>
 </div>
+
+<footer class="footer">
+    {% block footer_block %}
+        <p>Default content goes here...</p>
+    {% endblock %}
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
@@ -72,6 +57,10 @@
                 this.classList.toggle('collapsed');
             }
         });
+    });
+
+    document.getElementById('toggleMenu').addEventListener('click', function () {
+        document.getElementById('menu').classList.toggle('d-none');
     });
 </script>
 {% block javascripts %}{% endblock %}
