database fix, for storing product photos and menu fix

--- a/public/css/main_page.css
+++ b/public/css/main_page.css
@@ -131,6 +131,26 @@ a {
     padding: 2px;
 }
 
+.menu {
+    display: none;
+    align-items: center;
+}
+
+.logo-menu {
+    display: flex;
+    align-items: center;
+}
+
+.main-logo {
+    margin-left: 15px !important;
+}
+
+.block-logo {
+    margin-top: 7px;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
 @media(max-width: 768px) {
     .nav {
         display: none;
@@ -142,6 +162,13 @@ a {
     }
     .burger-menu {
         display: block;
+    }
+    .logo-container {
+        display: none;
+    }
+    .menu {
+        display: flex;
+        justify-content: space-between;
     }
 }
 
