--- a/templates/add_product_page/add.html.twig
+++ b/templates/add_product_page/add.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Add product{% endblock title %}
+
+{% block off_sidebar %}{% endblock off_sidebar %}
+{% block product %}{% endblock product %}
+{% block off_footer %}{% endblock off_footer %}
 
 {% block content %}
 <div class="container mt-4">
