--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Main Page
-{% endblock %}
+{% block title %}Main Page{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/main_page.css') }}">
@@ -10,7 +9,7 @@
 {% block sidebar %}
     <div class="logo-container">
         <a href="#">
-            <img src="https://theme905-computer-shop.myshopify.com/cdn/shop/files/logo_85e8c0fb-6fe4-472c-bb57-12b9152508d0_140x40_crop_center.png?v=1651578820" alt="Modern Connectivity Logo" class="header-logo">
+            <img src="https://theme905-computer-shop.myshopify.com/cdn/shop/files/logo_85e8c0fb-6fe4-472c-bb57-12b9152508d0_140x40_crop_center.png?v=1651578820" alt="Logo">
         </a>
     </div>
     <div class="container">
@@ -25,7 +24,7 @@
                     <div class="block-logo">
                         <div class="logo-image">
                             <a href="#" class="header_logo">
-                                <img src="//theme905-computer-shop.myshopify.com/cdn/shop/files/logo_85e8c0fb-6fe4-472c-bb57-12b9152508d0_140x40_crop_center.png?v=1651578820" alt="logo" class="img-fluid">
+                                <img src="//theme905-computer-shop.myshopify.com/cdn/shop/files/logo_85e8c0fb-6fe4-472c-bb57-12b9152508d0_140x40_crop_center.png?v=1651578820" alt="Logo" class="img-fluid">
                             </a>
                         </div>
                     </div>
@@ -38,7 +37,7 @@
         </div>
     </div>
 
-    <ul class="nav flex-column first-block" style="margin-bottom: 100px;">
+    <ul class="nav flex-column first-block">
         <li class="nav-item">
             <a class="nav-link active" href="#">
                 <i class="fas fa-home"></i>Home</a>
@@ -91,7 +90,7 @@
         </li>
     </ul>
 
-    <ul class="nav flex-column first-block" style="margin-bottom: 100px;">
+    <ul class="nav flex-column first-block">
         <li class="nav-item">
             <a class="nav-link" href="#">
                 <i class="fas fa-search"></i>Search</a>
@@ -134,12 +133,12 @@
     <div class="content-block-video">
         <video autoplay muted>
             <source src="https://cdn.shopify.com/s/files/1/0453/5035/5103/files/mobilex.mp4?v=1651578696" type="video/mp4">
-            Ваш браузер не поддерживает видео.
+            Failed to load video.
         </video>
 
         <div class="content-block-text">
             <h2 style="color: white;">NEW COLLECTION</h2>
-            <p>Bike is a part<br>of culture</p>
+            <p><br>Explore the latest innovations in electronics!</p>
             <a href="#" style="text-decoration: underline; color: white;">EXPLORE COLLECTIONS</a>
         </div>
     </div>
@@ -167,7 +166,7 @@
 {% block footer_block %}
     <div class="footer-brand mb-4 mr-lx-5 mr-2 mb-md-0 border-n">
         <a class="footer-logo" href="#">
-            <img class="img-fluid" src="//theme905-computer-shop.myshopify.com/cdn/shop/files/logo_85e8c0fb-6fe4-472c-bb57-12b9152508d0_small_crop_center@2x.png?v=1651578820" alt="Mobilex">
+            <img class="img-fluid" src="//theme905-computer-shop.myshopify.com/cdn/shop/files/logo_85e8c0fb-6fe4-472c-bb57-12b9152508d0_small_crop_center@2x.png?v=1651578820" alt="Logo">
         </a>
     </div>
     <div class="footer-links">
