--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,40 +12,32 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <nav class="col-md-3 col-lg-2 d-md-block sidebar">
-            {% block sidebar %}
-            <button class="btn btn-primary d-md-none mb-3" id="toggleMenu">Toggle Menu</button>
-            <ul class="nav flex-column first-block" id="menu">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Shop <span class="arrow">&#x25B6;</span></a>
-                    <ul class="nav flex-column ms-3 collapse">
-                        <li class="nav-item"><a class="nav-link" href="#">Shop Item 1</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Shop Item 2</a></li>
-                    </ul>
-                </li>
-            </ul>
-            {% endblock %}
-        </nav>
+        {% block off_sidebar %}
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar">
+                {% block sidebar %}
+                {% endblock %}
+            </nav>
+        {% endblock off_sidebar %}
 
         <main class="col-md-9 col-lg-10 content">
             {% block content %}
-            <p>Default content goes here...</p>
+                <p>Default content goes here...</p>
             {% endblock %}
             {% block product %}
-            <p>Default content goes here...</p>
+                <p>Default content goes here...</p>
             {% endblock %}
         </main>
     </div>
 </div>
 
-<footer class="footer">
-    {% block footer_block %}
-        <p>Default content goes here...</p>
-    {% endblock %}
-</footer>
+{% block off_footer %}
+    <footer class="footer">
+        {% block footer_block %}
+            <p>Default content goes here...</p>
+        {% endblock %}
+    </footer>
+{% endblock off_footer %}
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
